Setting up things

--- a/src/Todo.txt
+++ b/src/Todo.txt
@@ -1,4 +1,7 @@
-﻿Set a proper list of items and places in the world. Can be useful or useless (depending on graphics). Place them
+﻿When items picked up from sea, they always go in top left inventory slot
+
+
+Set a proper list of items and places in the world. Can be useful or useless (depending on graphics). Place them
 - Popup box mechanism
 -Events - with and without consequences and pictures. Events and items in the world use the same mechanism.
 
